@@ -1,19 +1,22 @@
 package test;
 
 
+import java.util.ArrayList;
+
+//-Xms20M -Xmx20M -Xmn10M -XX:+UseSerialGC -XX:+PrintGCDetails -verbose:gc
 public class TestMain {
+
+    private static final int _512KB = 512 * 1024;
+    private static final int _1MB = 1024 * 1024;
+    private static final int _6MB = 6 * 1024 * 1024;
+    private static final int _7MB = 7 * 1024 * 1024;
+    private static final int _8MB = 8 * 1024 * 1024;
+
     public static void main(String[] args){
-
-        String s = new String("a")+new String("b");
-        String x = "ab";
-        s.intern();
-        System.out.println(s == x);
-
-//        System.out.println(s == "ab");
-//        String s2 = s.intern();
-//        System.out.println(s == "ab");
-//        System.out.println(s2 == "ab");
-
+        ArrayList<byte[]> list = new ArrayList<>();
+        list.add(new byte[_7MB]);
+        list.add(new byte[_512KB]);
+        list.add(new byte[_512KB]);
     }
 
 }
